objects/Symbol2__c.object
<CustomObject>
    <fields>
        <fullName>Unicodes12__c</fullName>
        <description>€ - euro
¥  - &apos;yen
© copy</description>
        <label>Unicodes1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currences__c</fullName>
        <label>currences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$ Dollar</fullName>
                </value>
                <value>
                    <fullName>£ (pound)</fullName>
                </value>
                <value>
                    <fullName>¥ (yen)</fullName>
                </value>
                <value>
                    <fullName>€ (euro)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>namber__c</fullName>
        <label>number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newField__c</fullName>
        <label>newField</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist2__c</fullName>
        <label>picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Symbol2</label>
    <nameField>
        <label>Symbol Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Symbols2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>